--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.crossdle">
+    package="com.example.crossdle" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Crossdle">
+        android:theme="@style/Theme.Crossdle" >
+        <activity
+            android:name=".FinishedGamePopUp"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsPopUp"
+            android:exported="false" />
+        <activity
+            android:name=".HelpPopUp"
+            android:exported="false" />
         <activity
             android:name=".HistoryActivity"
             android:exported="false" />
@@ -17,7 +26,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
