--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.crossdle" >
+    package="com.example.crossdle">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Crossdle" >
+        android:theme="@style/Theme.Crossdle">
+        <activity
+            android:name=".app.activity.SignInActivity"
+            android:exported="false" />
         <activity
             android:name=".app.popup.FinishedGamePopup"
             android:exported="false" />
@@ -26,9 +29,10 @@
             android:exported="true" />
         <activity
             android:name=".app.activity.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
