Animations & Cell Hiding -Changed board to not show cell hints when word is selected -Added animations for main activity and game activity when entering letters

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.Crossdle">
         <activity
             android:name=".app.activity.MainActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".app.popup.FinishedGamePopup"
             android:exported="false" />
