Crossdle - Setting Button Now works and got rid of Action bars in Sign up and Setting activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:exported="false" />
         <activity
             android:name=".app.popup.SettingsPopup"
-            android:exported="false" />
+            android:theme="@style/settings_pop_up_style"
+            android:exported="true" />
         <activity
             android:name=".app.popup.HelpPopup"
             android:exported="false" />
