--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:exported="true" />
         <activity
             android:name=".app.popup.HelpPopup"
-            android:exported="false" />
+            android:theme="@style/settings_pop_up_style"
+            android:exported="true" />
         <activity
             android:name=".app.activity.HistoryActivity"
             android:exported="true" />
